--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <!--Server-->
-    <string name="server">https://</string>
+    <string name="server">https://roush.loducode.com/</string>
 
     <!--Strings Onboarding-->
     <string name="Title_onboarding1">Haz nuevos amigos</string>
@@ -26,7 +26,7 @@
     <!--Strings Login-->
     <string name="greet_login">Bienvenid@</string>
     <string name="greet_login2">Inicia sesión en tu cuenta</string>
-    <string name="hint1">Ingresa tu correo electrónico</string>
+    <string name="hint1">Ingresa tu nombre de usuario</string>
     <string name="hint2">Ingresa tu contraseña</string>
     <string name="Login">Iniciar sesión</string>
     <string name="forgot_password_link"><u>¿Olvidaste tu contraseña?</u></string>
