--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,6 +72,18 @@
     <!--Strings Profile-->
     <string name="title_profile"><b>Perfil</b></string>
     <string name="profile_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
+    <string name="profession"><b>Profesión:</b></string>
+    <string name="email_profile"><b>Correo:</b></string>
+    <string name="password_profile"><b>Contraseña:</b></string>
+    <string name="date_birth_profile"><b>Fecha de nacimiento:</b></string>
+    <string name="gender_profile"><b>Género:</b></string>
+    <string name="location_profile"><b>Ubicación:</b></string>
+    <string name="description"><b>Descripción:</b></string>
+    <string name="search_location"><b>Quiero ver personas en...</b></string>
+    <string name="gender_preferences"><b>Preferencia de género</b></string>
+    <string name="max_distance"><b>Rango distancia que quiero ver</b></string>
+    <string name="max_age"><b>Rango edad que quiero ver</b></string>
+    <string name="upload_photos"><b>Sube tus fotos</b></string>
 
     <!--Strings Notifications-->
     <string name="title_notifications"><b>Notificaciones</b></string>
