--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <!--Server-->
-    <string name="server">https://roush.loducode.com/</string>
+    <string name="server">https://roush.loducode.com</string>
 
     <!--Errors-->
     <string name="password_dont_match">Las contraseñas no coinciden</string>
