--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,6 +103,14 @@
     <string name="like_received_ntf">Cuando me den \"Me gusta\"</string>
     <string name="cross_with_ntf">Cuando me cruce con alguien con la app</string>
 
+    <!--Strings Blogs-->
+    <string name="title_blog">Historias</string>
+    <string name="tell_us_your_history">Cuéntanos tu historia</string>
+    <string name="history_1">Top 10 mejores playas</string>
+    <string name="history_2">Algo random</string>
+    <string name="history_3">Érase una vez...</string>
+    <string name="history_4">WTF?</string>
+
     <!--Strings RecoveryPassword-->
     <string name="keep_calm">Tranquil@</string>
     <string name="text_recovery_password">Puedes recuperar tu contraseña ingresando estos datos y luego revisando tu correo electrónico</string>
