Modificaciones visuales y funcionales home y profile

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,6 +100,7 @@
     <string name="text_exclusive_content">Si te gustaría publicar contenido exclusivo y ganar dinero extra.</string>
     <string name="your_information_is_saved_success">Tu información ha sido guardada <b>exitosamente</b></string>
     <string name="view_content_">Ver contenido</string>
+    <string name="no_longer_interested">Ya no me interesa</string>
     <string name="men">Hombre</string>
     <string name="women">Mujer</string>
     <string name="other">Otr@</string>
