Mostrar Fotos e intereses seleccionados en perfil

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -180,7 +180,7 @@
     <string name="button_swimming">Natación</string>
     <string name="button_art">Arte</string>
     <string name="button_travel">Viajar</string>
-    <string name="button_extreme">Extreme</string>
+    <string name="button_extreme">Extremo</string>
     <string name="button_music">Música</string>
     <string name="button_drink">Bebida</string>
     <string name="button_video_games">Videojuegos</string>
