--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,19 +103,22 @@
     <string name="no_longer_interested">Ya no me interesa</string>
     <string name="men">Hombre</string>
     <string name="women">Mujer</string>
+    <string name="both">Ambos</string>
     <string name="other">Otr@</string>
     <string name="ok">Ok</string>
     <string name="yes">Si</string>
     <string name="no">No</string>
     <string name="indiferent">Indiferente</string>
 
-    <!--Strings Notifications-->
+    <!--Strings Notifications Settings-->
     <string name="title_notifications"><b>Notificaciones</b></string>
     <string name="deactivate_notifications"><b>Desactivar todas</b></string>
     <string name="message_receive_ntf">Cuando me llegue un mensaje</string>
     <string name="match_done_ntf">Cuando haga un match</string>
     <string name="like_received_ntf">Cuando me den \"Me gusta\"</string>
     <string name="cross_with_ntf">Cuando me cruce con alguien con la app</string>
+    <string name="notifications_setting">Notificaciones</string>
+    <string name="blocked_persons_sett">Personas bloqueadas</string>
 
     <!--Strings Blogs-->
     <string name="title_blog">Historias</string>
